--- a/.github/workflows/deploy-ipfs.yaml
+++ b/.github/workflows/deploy-ipfs.yaml
@@ -1,5 +1,10 @@
 name: Deploy to IPFS
 
+permissions:
+  contents: read
+  pull-requests: write
+  statuses: write
+
 on:
   push:
     branches:
@@ -10,25 +15,27 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Node
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn build
-        env:
-          VITE_WEB_API_URL: ${{ vars.VITE_WEB_API_URL }} 
+          cache: 'yarn'
 
-      - name: Upload to Pinata
-        uses: aquiladev/ipfs-action@v0.3.1
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Build project
+        run: yarn build
+        env:
+          VITE_WEB_API_URL: ${{ vars.VITE_WEB_API_URL }}
+
+      - name: Deploy to IPFS
+        uses: ipfs/ipfs-deploy-action@v1
+        id: deploy
         with:
-          path: ./dist
-          service: pinata
-          pinataKey: ${{ secrets.PINATA_API_KEY }}
-          pinataSecret: ${{ secrets.PINATA_SECRET_API_KEY }}
-          pinName: cfp-funding-tool-ui
+          path-to-deploy: dist
+          pinata-jwt-token: ${{ secrets.PINATA_JWT }}
+          github-token: ${{ github.token }}
